argocd/apps/affine/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: affine
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
