argocd/apps/affine/deployment.yml
---
# AFFiNE Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-server
  namespace: affine
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: affine-server
  template:
    metadata:
      labels:
        app: affine-server
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: affine
        image: ghcr.io/toeverything/affine-graphql:stable
        ports:
        - name: http
          containerPort: 3010
          protocol: TCP
        volumeMounts:
        - name: affine-upload
          mountPath: /root/.affine/storage
        - name: affine-config
          mountPath: /root/.affine/config
      volumes:
      - name: affine-upload
        persistentVolumeClaim:
          claimName: affine-upload-pvc
      - name: affine-config
        persistentVolumeClaim:
          claimName: affine-config-pvc
